infrastructure/configs/kube-prometheus-stack/prometheus-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus-httproute
  namespace: monitoring
spec:
  parentRefs:
    - name: mdch-lab-gateway
      namespace: cilium
  hostnames:
    - "prometheus.mdch-lab.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: kube-prometheus-stack-prometheus
          port: 9090
